# RateLingo

./: .gitignore  README.md  RateLingo.py  gui-ratelingo.py  gui-studies.py  main.py  new_readme.md  pyproject.toml  tempCodeRunnerFile.py
src/: __init__.py  cli.py  core.py  database.py  gui.py
